--- a/polymer-v2.0.0-lit-html-non-keyed/bower.json
+++ b/polymer-v2.0.0-lit-html-non-keyed/bower.json
@@ -2,7 +2,8 @@
   "name": "polymer-temp",
   "main": "polymer-temp.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "lit-html": "https://github.com/PolymerLabs/lit-html.git"
   },
   "devDependencies": {
     "web-component-tester": "^6.0.0-prerelease.5",
